--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-ide-helper": "^2.2",
         "laravelcollective/html": "5.2.*",
-        "laracasts/flash": "^2.0"
+        "laracasts/flash": "^2.0",
+        "telegram-bot/api": "^2.2",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
