--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "laracasts/flash": "^2.0",
         "telegram-bot/api": "^2.2",
         "guzzlehttp/guzzle": "~6.0",
-        "irazasyed/telegram-bot-sdk": "^2.0"
+        "irazasyed/telegram-bot-sdk": "^2.0",
+        "fzaninotto/faker": "^1.6"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
